test_case/rust-lang_rust/22720_75702049.rs

/opt/rust/src/test/parse-fail/issue-22426.rs:18:16: 18:17 error: unexpected token: `<`
/opt/rust/src/test/parse-fail/issue-22426.rs:18             Foo<T>(ref x, ref y) => {}  //~ ERROR expected identifier, found enum or struct
                                                               ^
